--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gif Search</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
+
         <div class="row">
             <div class="col-md-12">
-                <div id="btnRow"></div>
-
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-md-9" id="gifRow">
-
-            </div>
-            
-            <div class="col-md-3">
                 <div class="input-bar">
-                    <label for="gifInput">Giphy Search</label>
+                    <label for="gifInput"><img src="assets/images/giphylogo.png" alt="giphyLogo" /></label>
                     <div class="input-bar-item">
                         <div class="input-group">
                             <input type="gif" class="form-control" id="gifInput" aria-describedby="gifSearch"
@@ -35,12 +26,21 @@
                             <span class="input-group-btn">
                                 <button type="submit" class="btn btn-primary" id="gifSearch"><i class="fas fa-search"></i></button>
                             </span>
-                            <small class="form-text text-muted">It's pronounced Gif not Jif, fite me m8</small>
                         </div>
                     </div>
                 </div>
+                <button id="tenMore"> 10 More Please</button>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div id="btnRow"></div>
+            </div>
+        </div>
+
+        <div class="row" id="gifRow"></div>
+
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
