--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono:400,700" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -34,7 +35,7 @@
                             <input type="gif" class="form-control" id="gifInput" aria-describedby="gifSearch"
                                 placeholder="Enter Search Term Here">
                             <span class="input-group-btn">
-                                <button type="submit" class="btn btn-primary" id="gifSearch"><i class="fas fa-search"></i></button>
+                                <button type="button" value ="Submit" class="btn btn-primary" id="gifSearch"><i class="fas fa-search"></i></button>
                             </span>
                         </div>
                     </div>
